Fixed the cropped footer issue in editor

--- a/src/devtools/client/debugger/src/components/Editor/Footer.css
+++ b/src/devtools/client/debugger/src/components/Editor/Footer.css
@@ -27,6 +27,9 @@
   display: flex;
   align-items: center;
   margin-left: auto;
+  position: relative;
+  margin-top: -7px;
+  margin-right: 5px;
 }
 
 .source-footer .commands * {
