--- a/src/devtools/client/debugger/src/components/variables.css
+++ b/src/devtools/client/debugger/src/components/variables.css
@@ -4,11 +4,11 @@
 
 :root {
   /* header height is 28px + 1px for its border */
-  --editor-header-height: 36px;
+  --editor-header-height: 41px;
   /* footer height is 29px + 1px for its border */
-  --editor-footer-height: 29px;
+  --editor-footer-height: 35px;
   /* searchbar height is 29px + 1px for its top border */
-  --editor-searchbar-height: 29px;
+  --editor-searchbar-height: 35px;
   /* Remove once https://bugzilla.mozilla.org/show_bug.cgi?id=1520440 lands */
   --theme-code-line-height: calc(15 / 11);
 }
